navbar - cambio general (otra vez)

--- a/index.html
+++ b/index.html
@@ -40,14 +40,6 @@
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
               <li><a href="./index.html"><span>Inicio</span></a></li>
               <li class="has-children">
-                <a href="#"><span>Personal</span></a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="./pages/investigadores.html">Investigadores</a></li>
-                  <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="./pages/pasantes.html">Pasantes</a></li>
-                </ul>
-              </li>
-              <li class="has-children">
                 <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
                   <li><a href="./pages/I+D+i.html">I+D+i</a></li>
@@ -78,16 +70,24 @@
                   </li>
                 </ul>
               </li>
+              <li class="has-children">
+                <a href="#"><span>Personal</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="./pages/investigadores.html">Investigadores</a></li>
+                  <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                  <li><a href="./pages/pasantes.html">Pasantes</a></li>
+                </ul>
+              </li>
               <li><a href="./pages/servicios.html"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
-          <a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
+          <a href="#" class="site-menu-toggle js-menu-toggle text-dark"><span class="icon-menu h3"></span></a>
         </div>
         </div>
     </div>
-  </header>
+</header>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
