--- a/pages/I+D+i.html
+++ b/pages/I+D+i.html
@@ -22,8 +22,7 @@
           </div>
         </div>
         <div class="site-mobile-menu-body"></div>
-    </div>
-      
+    </div>     
     <header class="site-navbar" role="banner">
         <div class="container">
           <div class="row align-items-center">
@@ -39,17 +38,9 @@
                 <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                   <li><a href="../index.html"><span>Inicio</span></a></li>
                   <li class="has-children">
-                    <a href="#"><span>Personal</span></a>
+                    <a href="#"><span>CTeI</span></a>
                     <ul class="dropdown arrow-top">
-                      <li><a href="../pages/investigadores.html">Investigadores</a></li>
-                      <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                      <li><a href="../pages/pasantes.html">Pasantes</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-children">
-                    <a href="./pages/CteI.html"><span>CTeI</span></a>
-                    <ul class="dropdown arrow-top">
-                      <li><a href="./pages/proyectos.html">I+D+i</a></li>
+                      <li><a href="../pages/I+D+i.html">I+D+i</a></li>
                       <li class="has-children">
                         <a href="#">Academics for Scientist</a>
                         <ul class="dropdown">
@@ -75,6 +66,14 @@
                           <li><a href="#">Estudios Ambientales y Desarrollo de Productos</a></li>
                         </ul>
                       </li>
+                    </ul>
+                  </li>
+                  <li class="has-children">
+                    <a href="#"><span>Personal</span></a>
+                    <ul class="dropdown arrow-top">
+                      <li><a href="../pages/investigadores.html">Investigadores</a></li>
+                      <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                      <li><a href="../pages/pasantes.html">Pasantes</a></li>
                     </ul>
                   </li>
                   <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
