--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -41,22 +41,14 @@
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
               <li><a href="../index.html"><span>Inicio</span></a></li>
               <li class="has-children">
-                <a href="#"><span>Personal</span></a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="../pages/investigadores.html">Investigadores</a></li>
-                  <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="../pages/pasantes.html">Pasantes</a></li>
-                </ul>
-              </li>
-              <li class="has-children">
                 <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="#">I+D+i</a></li>
+                  <li><a href="../pages/I+D+i.html">I+D+i</a></li>
                   <li class="has-children">
                     <a href="#">Academics for Scientist</a>
                     <ul class="dropdown">
                       <li><a href="#">Master AGRO 4.0</a></li>
-                      <li><a href="#">Esp. Hidroinformática</a></li>
+                      <li><a href="https://corhuila.edu.co/carreras_profesional/especializacion-en-hidroinformatica-modalidad-virtual/">Esp. Hidroinformática</a></li>
                       <li><a href="#">Summer Research Camp</a></li>
                       <li><a href="#">Science as Thinking</a></li>
                       <li><a href="#">Bootcamps</a></li>
@@ -79,6 +71,14 @@
                   </li>
                 </ul>
               </li>
+              <li class="has-children">
+                <a href="#"><span>Personal</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="../pages/investigadores.html">Investigadores</a></li>
+                  <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                  <li><a href="../pages/pasantes.html">Pasantes</a></li>
+                </ul>
+              </li>
               <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
             </ul>
           </nav>
@@ -88,7 +88,7 @@
         </div>
         </div>
     </div>
-  </header>
+</header>
 
   <main id="main">
 
