--- a/pages/noticias-eventos.html
+++ b/pages/noticias-eventos.html
@@ -53,12 +53,12 @@
                 <li class="has-children">
                   <a href="#"><span>CTeI</span></a>
                   <ul class="dropdown arrow-top">
-                    <li><a href="#">I+D+i</a></li>
+                    <li><a href="../pages/I+D+i.html">I+D+i</a></li>
                     <li class="has-children">
                       <a href="#">Academics for Scientist</a>
                       <ul class="dropdown">
                         <li><a href="#">Master AGRO 4.0</a></li>
-                        <li><a href="#">Esp. Hidroinformática</a></li>
+                        <li><a href="https://corhuila.edu.co/carreras_profesional/especializacion-en-hidroinformatica-modalidad-virtual/">Esp. Hidroinformática</a></li>
                         <li><a href="#">Summer Research Camp</a></li>
                         <li><a href="#">Science as Thinking</a></li>
                         <li><a href="#">Bootcamps</a></li>
