imagen del carousel e informacion de eventos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -130,7 +130,7 @@
           <div class="col-lg-4 col-md-12 col-12 d-flex align-items-stretch" >
             <div class="card">
               <div class="card-img">
-                <img src="../assets/img/1.jpg" alt="...">
+                <img src="../assets/img/mision.jpg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Misión</a></h5>
@@ -148,7 +148,7 @@
           <div class="col-lg-4 col-md-12  col-12 d-flex align-items-stretch" >
             <div class="card">
               <div class="card-img">
-                <img src="../assets/img/2.jpg" alt="...">
+                <img src="../assets/img/vision.png" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Visión</a></h5>
@@ -170,7 +170,7 @@
           <div class="col-lg-4 col-md-12 col-xs-12 col-12 d-flex align-items-stretch" >
             <div class="card">
               <div class="card-img">
-                <img src="../assets/img/3.png" alt="...">
+                <img src="../assets/img/valores.jpg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Valores</a></h5>
