--- a/pages/noticias-eventos.html
+++ b/pages/noticias-eventos.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!-- Bootstrap -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../assets/css/noticias-eventos.css">
     <title>Noticias y Eventos</title>
 </head>
@@ -202,7 +202,10 @@
                       </div2>
                     <h3 class="modal-title fs-5 mt-3 text-justify" id="staticBackdropLabel">CENIGAA - 2° Encuentro Internacional de Robótica Corhuila 2022</h3>
                     <p class="text-justify mt-3">
-                      La Audiencia Pública Rendición de Cuentas del Plan de Desarrollo Departamental Huila Crece es una audiencia pública anual realizada por el gobierno de Huila, Colombia para informar sobre los avances y resultados del Plan de Desarrollo de Huila Crece. Este plano fue creado. La audiencia pública es una oportunidad para que los ciudadanos participen en el proceso de rendición de cuentas y brinden retroalimentación al gobierno sobre la implementación del plan.
+                      CENIGAA presente en el 2do Encuentro Internacional de Robótica Corhuila 2022,
+                      nuestro equipo se siente orgulloso de exponer un emprendimiento de base tecnológica gestado en la unidad de innovación exponencial de CENIGAA.
+                      Nuestro stand fue visitado por el Dr. Luis Enrique Dussan, Gobernador del Departamento del Huila y el Dr Oscar Eduardo Chavarro
+                      rector de la Universidad Corhuila.
                     </p>
                 </div>
             </div>
