--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -191,7 +191,7 @@
                             <div class="col-lg-12">
                               <div class="text-center">
                                 <h5>G-PRO <small>(GEO PROCESSING)</small></h5>
-                                <img src="../assets/img/g-pro-ficha.jpg" alt="" style="width: 65%;">
+                                <img class="img-fluid rounded" src="../assets/img/g-pro-ficha.jpg" alt="">
                                 <hr>
                               </div>
                               <P class="fst-italic">
