--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
           </div>
     </div>
     <div class="carousel-item">
-          <img class="d-block w-100" src="./assets/img/ground.png" alt="Third slide">
+          <img class="d-block w-100" src="./assets/img/g-pro-background.png" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Banner Text three</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+            <h5>Geo Procesamiento</h5>
+            <p>Serivicios aéreros con drone para el agro e industria.</p>
+            <a class="btn btn-light" href="#" role="button">Link</a>
           </div>
     </div>
     </div>
@@ -136,7 +137,9 @@
               Cenigaa
             </h2>
             <p class="description">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit quidem at consectetur voluptate magni voluptatem sapiente facilis. Nesciunt accusantium officiis pariatur voluptatum asperiores recusandae earum eaque cupiditate delectus libero in, eius praesentium deleniti voluptatibus totam, beatae accusamus amet similique aperiam neque? Quos at ratione dolorum iure, officia nisi eius, doloribus eveniet dicta ullam minus magni ut est fuga nemo voluptatem!
+              CENIGAA es una fundación científica que integra el conocimiento del agro, la geología y las ciencias ambientales
+              para promover el desarrollo sostenible regional a tráves de la investigación, la innovación y el 
+              desarrollo tecnológico en el uso de los recursos naturales.
             </p>
             <a href="./pages/nosotros.html" class="about-us">
               <button class="button">Conoce Más</button>
@@ -201,7 +204,7 @@
       </div>
         <div class="product">
           <div class="product-card">
-            <h2 class="name">Feria Internacional del Cacao y el Café</h2>
+            <h2 class="name">2<sup>a</sup> Feria Internacional del Cacao y el Café</h2>
             <a class="popup-btn">Vista Rápida</a>
             <img src="./assets/svg/CacaoHuila.svg" alt="" class="product-img">
           </div>
@@ -212,8 +215,11 @@
                 <img src="./assets/img/cacaoProject.jpg" alt="">
               </div>
               <div class="info">
-                <h2>Fería Internacional del Cacao y el Café</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>2<sup>a</sup> Fería Internacional del Cacao y el Café</h2>
+                <p>
+                  La Feria Internacional de Café Cacao y Muestra Agroturística 2022. Este evento será una vitrina internacional
+                  para los productores de café, cacao y experiencias en turismo, con el fin de apuntarle a nuevos nichos de mercado.
+                </p>
               </div>
             </div>
           </div>
@@ -232,7 +238,11 @@
               </div>
               <div class="info">
                 <h2>Cámara de Comercio, Visita Ecuador</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>
+                  La gobernación del Huila a través de la secretaria de Agricultura y la Cámara de comercio como secretaria
+                  técnica privada de la cadena Departamental de Cacao y el centro de investigación CENIGAA, participamos de la reunión de la Cadena Departamental de Cacao.
+                  El evento contó con la participación de una Comisión de Expertos del Ministerio de Agricultura de Ecuador.
+                .</p>
               </div>
             </div>
           </div>
@@ -251,7 +261,10 @@
               </div>
               <div class="info">
                 <h2>Huila Fest 4.0</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>
+                  El emprendimiento opita, la tecnología, los talleres y la motivación hacen presencia,
+                  la agenda acádemica, será la base de Huila Fest 4.0.
+                </p>
               </div>
             </div>
           </div>
