--- a/pages/jovenesInvestigadores.html
+++ b/pages/jovenesInvestigadores.html
@@ -88,7 +88,7 @@
         </div>
         </div>
     </div>
-</header>
+  </header>
 
     <main id="main">
       <!-- ======= Why Us Section ======= -->
@@ -129,8 +129,8 @@
               <div class="member d-flex align-items-start" >
                 <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>James</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Jennifer Carmona</h4>
+                  <span>Biologa</span>
                   
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
@@ -145,8 +145,8 @@
               <div class="member d-flex align-items-start" >
                 <div class="teampic"><img src="../assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Benjamin</h4>
-                  <span>Full-stack developer</span>
+                  <h4>Carlos Vidal Gonzalez</h4>
+                  <span>Sr Developer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
                     <a href=""><i class="fa-solid fa-envelope"></i></a>
