cambios generales, navbar y personal

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
               <li class="has-children">
                 <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="./pages/I+D+i.html">I+D+i</a></li>
+                  <li class="has-children">
+                    <a href="#">I+D+i</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Actividades Nucleares</a></li>
+                      <li><a href="#">Actividades Complementarias</a></li>
+                    </ul>
+                  </li>
                   <li class="has-children">
                     <a href="#">Academics for Scientist</a>
                     <ul class="dropdown">
@@ -70,15 +76,9 @@
                   </li>
                 </ul>
               </li>
-              <li class="has-children">
-                <a href="#"><span>Personal</span></a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="./pages/investigadores.html">Investigadores</a></li>
-                  <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="./pages/pasantes.html">Pasantes</a></li>
-                </ul>
-              </li>
+              <li><a href="./pages/investigadores.html"><span>Personal</span></a></li>
               <li><a href="./pages/servicios.html"><span>Servicios</span></a></li>
+              <li><a href="#"><span>Publicaciones</span></a></li>
             </ul>
           </nav>
         </div>
@@ -87,7 +87,7 @@
         </div>
         </div>
     </div>
-</header>
+  </header>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
