--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -10,12 +10,6 @@
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <link rel="shortcut icon" href="../assets/img/logo-cenigaa.ico">
     <!-- Bootstrap CSS -->
-
-
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-
-
-
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/califiaciónESAL.css">
@@ -49,7 +43,13 @@
                 <li class="has-children">
                   <a href="#"><span>CTeI</span></a>
                   <ul class="dropdown arrow-top">
-                    <li><a href="../pages/I+D+i.html">I+D+i</a></li>
+                    <li class="has-children">
+                      <a href="#">I+D+i</a>
+                      <ul class="dropdown">
+                        <li><a href="#">Actividades Nucleares</a></li>
+                        <li><a href="#">Actividades Complementarias</a></li>
+                      </ul>
+                    </li>
                     <li class="has-children">
                       <a href="#">Academics for Scientist</a>
                       <ul class="dropdown">
@@ -77,15 +77,9 @@
                     </li>
                   </ul>
                 </li>
-                <li class="has-children">
-                  <a href="#"><span>Personal</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="../pages/investigadores.html">Investigadores</a></li>
-                    <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                    <li><a href="../pages/pasantes.html">Pasantes</a></li>
-                  </ul>
-                </li>
+                <li><a href="#"><span>Personal</span></a></li>
                 <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
+                <li><a href="#"><span>Publicaciones</span></a></li>
               </ul>
             </nav>
           </div>
