--- a/pages/investigadores.html
+++ b/pages/investigadores.html
@@ -44,7 +44,13 @@
               <li class="has-children">
                 <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="../pages/I+D+i.html">I+D+i</a></li>
+                  <li class="has-children">
+                    <a href="#">I+D+i</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Actividades Nucleares</a></li>
+                      <li><a href="#">Actividades Complementarias</a></li>
+                    </ul>
+                  </li>
                   <li class="has-children">
                     <a href="#">Academics for Scientist</a>
                     <ul class="dropdown">
@@ -72,15 +78,9 @@
                   </li>
                 </ul>
               </li>
-              <li class="has-children">
-                <a href="#"><span>Personal</span></a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="../pages/investigadores.html">Investigadores</a></li>
-                  <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="../pages/pasantes.html">Pasantes</a></li>
-                </ul>
-              </li>
+              <li><a href="#"><span>Personal</span></a></li>
               <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
+              <li><a href="#"><span>Publicaciones</span></a></li>
             </ul>
           </nav>
         </div>
@@ -89,7 +89,7 @@
         </div>
         </div>
     </div>
-</header>
+  </header>
 
   <main id="main">
       <!-- ======= Why Us Section ======= -->
@@ -125,6 +125,155 @@
 
       <section id="team" class="team section-bg">
         <div class="container">
+          <div class="section-title">
+            <h2>Investigadores</h2>
+            <div class="underline"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Andres Palacios</h4>
+                  <span>Chief Executive Officer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-6 mt-4 mt-lg-0">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Jorge Chavarro</h4>
+                  <span>Full-stack developer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-6 mt-4">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Amalia Molina</h4>
+                  <span>Senior software engineer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-6 mt-4">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Jhon Chavarro</h4>
+                  <span>Senior software engineer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </section>
+
+      <section id="team" class="team section-bg">
+        <div class="container">
+          <div class="section-title">
+            <h2>Jóvenes Investigadores</h2>
+            <div class="underline"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Jennifer Carmona</h4>
+                  <span>Biologa</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-6 mt-4 mt-lg-0">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Carlos Vidal Gonzalez</h4>
+                  <span>Sr developer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-6 mt-4">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Amalia Molina</h4>
+                  <span>Senior software engineer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-6 mt-4">
+              <div class="member d-flex align-items-start" >
+                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Jhon Chavarro</h4>
+                  <span>Senior software engineer</span>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </section>
+
+      <section id="team" class="team section-bg">
+        <div class="container">
+          <div class="section-title">
+            <h2>Pasantes</h2>
+            <div class="underline"></div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
+          </div>
           <div class="row">
             <div class="col-lg-6">
               <div class="member d-flex align-items-start" >
