--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -43,7 +43,13 @@
               <li class="has-children">
                 <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="../pages/I+D+i.html">I+D+i</a></li>
+                  <li class="has-children">
+                    <a href="#">I+D+i</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Actividad Nuclear</a></li>
+                      <li><a href="#">Actividades Complementarias</a></li>
+                    </ul>
+                  </li>
                   <li class="has-children">
                     <a href="#">Academics for Scientist</a>
                     <ul class="dropdown">
@@ -71,15 +77,9 @@
                   </li>
                 </ul>
               </li>
-              <li class="has-children">
-                <a href="#"><span>Personal</span></a>
-                <ul class="dropdown arrow-top">
-                  <li><a href="../pages/investigadores.html">Investigadores</a></li>
-                  <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                  <li><a href="../pages/pasantes.html">Pasantes</a></li>
-                </ul>
-              </li>
+              <li><a href="#"><span>Personal</span></a></li>
               <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
+              <li><a href="#"><span>Publicaciones</span></a></li>
             </ul>
           </nav>
         </div>
@@ -88,7 +88,7 @@
         </div>
         </div>
     </div>
-</header>
+  </header>
 
   <main id="main">
 
@@ -1673,9 +1673,7 @@
   </div>
 </body>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
-    integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 
     <script>
       gsap.fromTo(
