--- a/pages/investigadores.html
+++ b/pages/investigadores.html
@@ -130,14 +130,15 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Andres Palacios</h4>
                   <span>Chief Executive Officer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -145,14 +146,15 @@
   
             <div class="col-lg-6 mt-4 mt-lg-0">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Jorge Chavarro</h4>
                   <span>Full-stack developer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -160,14 +162,15 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Amalia Molina</h4>
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -175,14 +178,15 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Jhon Chavarro</h4>
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -202,14 +206,15 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Jennifer Carmona</h4>
                   <span>Biologa</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -217,14 +222,15 @@
   
             <div class="col-lg-6 mt-4 mt-lg-0">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Carlos Vidal Gonzalez</h4>
                   <span>Sr developer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -232,14 +238,15 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Amalia Molina</h4>
+                  <h4>Camilo Salas</h4>
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -247,14 +254,15 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Jhon Chavarro</h4>
+                  <h4>Natalia Vargas</h4>
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -274,14 +282,15 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Andres Palacios</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Diego Andres Tovar Rodriguez</h4>
+                  <span>Ingeniero de Software</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -289,14 +298,15 @@
   
             <div class="col-lg-6 mt-4 mt-lg-0">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Jorge Chavarro</h4>
-                  <span>Full-stack developer</span>
+                  <h4>Karen Estefania Gutierrez Lozano</h4>
+                  <span>Técnica en Chocolatería</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -304,14 +314,15 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Amalia Molina</h4>
-                  <span>Senior software engineer</span>
+                  <h4>Victor Alfonso Arias Ramirez</h4>
+                  <span>Aná. y Desarrollo de Sistemas de Información</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Gmail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#" title="Linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" title="Curriculum"><i class="fa-solid fa-address-card"></i></a>
                   </div>
                 </div>
               </div>
@@ -319,7 +330,7 @@
   
             <div class="col-lg-6 mt-4">
               <div class="member d-flex align-items-start" >
-                <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+                <div class="teampic"><img src="../assets/img/team/avatar-profile.png" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Jhon Chavarro</h4>
                   <span>Senior software engineer</span>
